<?xml version="1.0"?>
<package>
  <name>rqt_wrapper</name>
  <version>0.1.4</version>
  <description>A wrapper for keeping rqt programs alive.</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rqt_wrapper</url>
  <url type="repository">https://github.com/stonier/rqt_wrapper</url>
  <url type="bugtracker">https://github.com/stonier/rqt_wrapper/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python_qt_binding</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <!-- wrqt wrapped plugins -->
  <run_depend>rqt_plot</run_depend>
  <run_depend>rqt_reconfigure</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>
</package>
